arreglando cambios solicitados.

--- a/WebContent/createEstimation.html
+++ b/WebContent/createEstimation.html
@@ -106,8 +106,7 @@
 					<ul>
 					    <li><a href="#tabs-1">Paciente</a></li>
 					    <li><a href="#tabs-2">Protocolos</a></li>
-					    <li><a href="#tabs-3">Servicios</a></li>
-			  		</ul>
+					</ul>
   					<div id="tabs-1">
   						<br>
 					    <p>
@@ -150,40 +149,19 @@
   						<table id="sweetTable">
 							<tbody>
 								<tr>
-									<th>Protocolo</th>
+									<th>Nombre</th>
+									<th>Precio</th>
 									<th>Acción</th>
-								</tr>				
+								</tr>			
 								<tr>
-									<td id="columna a cambiars" colspan="2" style="text-align: center;">El paciente aún no tiene ningún protócolo asignado</td>
+									<td id="columna a cambiars" colspan="3" style="text-align: center;">El paciente aún no tiene ningún protócolo asignado</td>
 								</tr>				
 								
 							</tbody>
 						</table>
 						<br>
 					</div>
-  					<div id="tabs-3">
-  						<div style="text-align:right;">
-	  						<a href="searchServices.html?function=createEstimation" style="color: #006c92; font-weight: bold;">
-								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Servicio
-							</a>						
-  						</div>
-  						<br>
-  						<br>
-					    <table id="sweetTable">
-							<tbody>
-								<tr>
-									<th>Servicio</th>
-									<th>Precio</th>
-									<th>Acción</th>
-								</tr>				
-								<tr>
-									<td colspan="3" style="text-align: center;">El paciente aún no tiene ningún servicio asignado</td>
-								</tr>
-							</tbody>
-						</table>
-						<br>
-					</div>
-				</div>
+  				</div>
 				
 			</div>
 		</div>
