--- a/WebContent/emergencies.html
+++ b/WebContent/emergencies.html
@@ -127,6 +127,9 @@
 												onclick="return loadVars(1001,'Ana Rojas');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
+											<a href="showStatement.html" style="color: transparent" >
+												<img alt="logo" src="./images/movements.png"  height="16" width="16" title="Corte de Cuenta" />
+											</a>
 											<br>
 										</td>
 									</tr>
@@ -155,6 +158,9 @@
 												onclick="return loadVars(1002,'Luis Mujica');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/movements.png"  height="16" width="16" title="Corte de Cuenta" />
+											</a>
 											<br>
 										</td>
 									</tr>
@@ -183,6 +189,10 @@
 												onclick="return loadVars(1003,'Miguel Álvarez');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/movements.png"  height="16" width="16" title="Corte de Cuenta" />
+											</a>
+											
 											<br>
 										</td>
 									</tr>
