--- a/WebContent/hospitalization.html
+++ b/WebContent/hospitalization.html
@@ -123,6 +123,9 @@
 												onclick="return loadVars(1001,'Ana Rojas');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
+											<a href="showStatement.html?function=emergencies" style="color: transparent" >
+												<img alt="logo" src="./images/movements.png"  height="16" width="16" title="Corte de Cuenta" />
+											</a>
 											<br>
 										</td>
 									</tr>
@@ -147,6 +150,9 @@
 												onclick="return loadVars(1002,'Luis Mujica');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/movements.png"  height="16" width="16" title="Corte de Cuenta" />
+											</a>
 											<br>
 										</td>
 									</tr>
@@ -171,6 +177,9 @@
 												onclick="return loadVars(1003,'Miguel Álvarez');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/movements.png"  height="16" width="16" title="Corte de Cuenta" />
+											</a>
 											<br>
 										</td>
 									</tr>
