--- a/WebContent/searchInsurance.html
+++ b/WebContent/searchInsurance.html
@@ -148,7 +148,7 @@
 								<tbody>			
 									<tr class="gradeA">
 										<td>
-											<input type="radio" name="insurance" value="Pago en Efectivo"><br>
+											<input type="checkbox" name="insurance" value="Pago en Efectivo"><br>
 										</td>
 										<td>1</td>
 										<td>Pago en Efectivo</td>
@@ -157,7 +157,7 @@
 									</tr>
 									<tr class="gradeA">
 										<td>
-											<input type="radio" name="insurance" value="La Previsora"><br>
+											<input type="checkbox" name="insurance" value="La Previsora"><br>
 										</td>
 										<td>2</td>
 										<td>La Previsora</td>
@@ -166,7 +166,7 @@
 									</tr>
 									<tr class="gradeA">
 										<td>
-											<input type="radio" name="insurance" value="Multinacional de Seguros C.A"><br>
+											<input type="checkbox" name="insurance" value="Multinacional de Seguros C.A"><br>
 										</td>
 										<td>3</td>
 										<td>Multinacional de Seguros, C.A</td>
