--- a/WebContent/searchProtocols.html
+++ b/WebContent/searchProtocols.html
@@ -18,6 +18,7 @@
 				{ "bSearchable": false, "asSorting": false, "sWidth": "10%" },
 				null,
 				null,
+				null,
 				null
 			],
 			"oLanguage": {
@@ -142,32 +143,38 @@
 										<th>ID</th>
 										<th>Unidad</th>
 										<th>Nombre</th>
+										<th>Costo</th>
 									</tr>
 								</thead>
 								<tbody>			
 									<tr class="gradeA">
 										<td>
-											<input type="radio" name="protocol" value="Frenuloplastia"><br>
+											<input type="checkbox" name="protocol" value="Frenuloplastia"><br>
 										</td>
 										<td>1001</td>
 										<td>Cirugía General</td>
 										<td>Frenuloplastia</td>
+										<td>Bs. 6550,00</td>
 									</tr>
 									<tr class="gradeA">
 										<td>
-											<input type="radio" name="protocol" value="Tratamiento Medico"><br>
+											<input type="checkbox" name="protocol" value="Tratamiento Medico"><br>
 										</td>
 										<td>1002</td>
 										<td>Otros Procedimientos</td>
 										<td>Tratamiento Médico</td>
+										<td>Bs. 8520,00</td>
+								
 									</tr>
 									<tr class="gradeA">
 										<td>
-											<input type="radio" name="protocol" value="Emergencia"><br>
+											<input type="checkbox" name="protocol" value="Emergencia"><br>
 										</td>
 										<td>1003</td>
 										<td>Emergencia</td>
 										<td>Emergencia</td>
+										<td>Bs. 2421,00</td>
+								
 									</tr>
 								</tbody>
 							</table>
