--- a/WebContent/editEstimation.html
+++ b/WebContent/editEstimation.html
@@ -77,8 +77,7 @@
 					<ul>
 					    <li><a href="#tabs-1">Paciente</a></li>
 					    <li><a href="#tabs-2">Protocolos</a></li>
-					    <li><a href="#tabs-3">Servicios</a></li>
-			  		</ul>
+					</ul>
   					<div id="tabs-1">
   						<br>
 					    <b> Cédula: </b> V-12345678<br><br>
@@ -116,93 +115,35 @@
   						</div>
   						<br>
   						<br>
-  						<table id="sweetTable">
-							<tbody>
-								<tr>
-									<th>Protocolo</th>
-									<th>Acción</th>
-								</tr>				
-								<tr>
-									<td>Histerectomía</td>
-									<td>
-										<a id="go" rel="leanModal" href="#deleteProtocol" style="color: #f7941e; font-weight: bold;" 
-											onclick="return loadVars(1001,'Histerectomía');" >
-											<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
-										</a> 
-									</td>
-								</tr>				
-								<tr>
-									<td>Colecistectomía</td>
-									<td>
-										<a id="go" rel="leanModal" href="#deleteProtocol" style="color: #f7941e; font-weight: bold;" 
-											onclick="return loadVars(1001,'Colecistectomía');" >
-											<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
-										</a>
-									</td>
-								</tr>				
-								<tr>
-									<td>Apendicectomía</td>
-									<td>
-										<a id="go" rel="leanModal" href="#deleteProtocol" style="color: #f7941e; font-weight: bold;" 
-											onclick="return loadVars(1001,'Apendicectomía');" >
-											<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
-										</a>
-									</td>
-								</tr>
-							</tbody>
-						</table>
-						<br>
-  					</div>
-  					<div id="tabs-3">
-  						<div style="text-align:right;">
-	  						<a href="searchServices.html?function=editEstimation" style="color: #006c92; font-weight: bold;">
-								<img alt="logo" src="./images/add.png" height="12" width="12" />Agregar Servicio
-							</a>						
-  						</div>
-  						<br>
-  						<br>
-					    <table id="sweetTable">
-							<tbody>
-								<tr>
-									<th>Servicio</th>
+					   	<table id="sweetTable" style="margin-bottom: 10px;">
+				   			<tr>
+									<th>Nombre</th>
 									<th>Precio</th>
 									<th>Acción</th>
-								</tr>				
-								<tr>
-									<td>Hospitalización</td>
-									<td>Bs 3472,00</td>
-									<td>
-										<a id="go" rel="leanModal" href="#deleteService" style="color: #f7941e; font-weight: bold;" 
-											onclick="return loadVars(1001,'Hospitalización');" >
+								</tr>	
+					   		<tr>
+					   			<td>Colocación de prótesis peneana</td>
+					   			<td>Bs. 14321,00</td>
+					   			<td>
+										<a id="go" rel="leanModal" href="#deleteProtocol" style="color: #f7941e; font-weight: bold;" 
+											onclick="return loadVars(1001,'Colocación de prótesis peneana');" >
 											<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
-										</a>
-									</td>
-								</tr>				
-								<tr>
-									<td>Anestesia Peridural</td>
-									<td>Bs 2727,50</td>
-									<td>
-										<a id="go" rel="leanModal" href="#deleteService" style="color: #f7941e; font-weight: bold;" 
-											onclick="return loadVars(1001,'Anestesia Peridural');" >
+										</a> 
+								</td>
+					   		</tr>
+					   		<tr>
+					   			<td>Apendicectomía</td>
+					   			<td>Bs. 7680,00</td>
+					   			<td>
+									<a id="go" rel="leanModal" href="#deleteProtocol" style="color: #f7941e; font-weight: bold;" 
+											onclick="return loadVars(1001,'Apendicectomía');" >
 											<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
-										</a>
-									</td>
-								</tr>				
-								<tr>
-									<td>Servicios Médicos</td>
-									<td>Bs 1021,90</td>
-									<td>
-										<a id="go" rel="leanModal" href="#deleteService" style="color: #f7941e; font-weight: bold;" 
-											onclick="return loadVars(1001,'Servicios Médicos');" >
-											<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
-										</a>
-									</td>
-								</tr>
-							</tbody>
-						</table>
-						<br>
+									</a>
+								</td>
+					   		</tr>
+					   	</table>
 					</div>
-				</div>
+  				</div>
 			</div>
 		</div>
 		<div id="deleteProtocol">
