--- a/WebContent/editSupply.html
+++ b/WebContent/editSupply.html
@@ -52,6 +52,12 @@
 				<fieldset>
 					<label for="name">Nombre:</label>
 					<input type="text" name="txtName" id="txtName" maxlength="50" size="5" value="Albumina Humana 20% 50 ml"/> <br><br>
+					<label for="name">Tipo:</label>
+					<select>
+						<option value="0">Seleccionar</option>
+						<option value="1" selected>Fármaco</option>
+						<option value="2">Suministro</option>						
+					</select> <br><br>
 					<label for="name">Descripción:</label>
 					<textarea name="txtDescription" id="txtDescription" rows="3" cols="50">Solución acuosa estéril de albúmina obtenida por fraccionamiento del plasma sanguíneo humano con etanol.</textarea> <br><br>
 					<label for="name">Cantidad:</label>
