--- a/WebContent/users.html
+++ b/WebContent/users.html
@@ -115,6 +115,9 @@
 											<a href="editUser.html" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 											</a>
+											<a href="editUserPassword.html" style="color: transparent" >
+												<img alt="logo" src="./images/editPassword2.png"  height="16" width="16" title="Contraseña"/>
+											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
 												onclick="return loadVars(1001,'1001');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
@@ -132,6 +135,9 @@
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 											</a>
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/editPassword2.png"  height="16" width="16" title="Contraseña"/>
+											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
 												onclick="return loadVars(1002,'1002');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
@@ -148,6 +154,9 @@
 										<td>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
+											</a>
+											<a href="#" style="color: transparent" >
+												<img alt="logo" src="./images/editPassword2.png"  height="16" width="16" title="Contraseña"/>
 											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
 												onclick="return loadVars(1003,'1003');" >
