--- a/WebContent/createSupply.html
+++ b/WebContent/createSupply.html
@@ -51,10 +51,48 @@
 				<fieldset>
 					<label for="name">Nombre:</label>
 					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+					<label for="name">Tipo:</label>
+					<select>
+						<option value="0" selected>Seleccionar</option>
+						<option value="1">Fármaco</option>
+						<option value="2">Suministro</option>						
+					</select> <br><br>
 					<label for="name">Descripción:</label>
 					<textarea name="txtDescription" id="txtDescription" rows="3" cols="50"></textarea> <br><br>
+					<label for="name">Componente Activo:</label>
+					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
+					<label for="name">Fabricante:</label>
+					<input type="text" name="txtName" id="txtName" maxlength="50" size="5"/> <br><br>
 					<label for="name">Cantidad:</label>
 					<input type="number" min="1" name="txtAmount" id="txtAmount" maxlength="3" size="3" /> <br><br>
+					<label for="name">Presentación:</label><select>
+						<option value="0" selected>Seleccionar</option>
+						<option value="2">Ampolla</option>	
+						<option value="2">Cápsula</option>	
+						<option value="2">Colirio</option>
+						<option value="2">Crema</option>
+						<option value="2">Elixir</option>	
+						<option value="2">Emplasto</option>
+						<option value="2">Enema</option>
+						<option value="2">Frasco</option>	
+						<option value="2">Granulado</option>
+						<option value="2">Inhalación</option>
+						<option value="2">Inyección</option>
+						<option value="2">Jarabe</option>
+						<option value="2">Linimento</option>
+						<option value="2">Loción</option>
+						<option value="2">Mucilago</option>	
+						<option value="2">Óvulo</option>		
+						<option value="1">Pastilla</option>
+						<option value="2">Polvo</option>
+						<option value="2">Preparado de Liberación Prolongada</option>
+						<option value="2">Solución</option>	
+						<option value="2">Supositorio</option>	
+						<option value="2">Suspensión</option>
+						<option value="2">Tintura</option>	
+						<option value="2">Trocisco</option>	
+						<option value="2">Ungüento</option>											
+					</select> <br><br>
 				</fieldset>
 				<div id="botonera">
 							<form action="supplies.html">
