--- a/WebContent/addEvolutionDetailOld.html
+++ b/WebContent/addEvolutionDetailOld.html
@@ -99,26 +99,30 @@
 			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 	    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
-		<div id="leftmenu">
-			<div id="leftmenu_top"></div>
-			<div id="leftmenu_main">
+		<div id='cssmenu'>
 				<ul>
-				    <li><a id="estimation"  href="estimations.html">Presupuestos</a></li>
-				    <li><a id="emergencies" href="emergencies.html">Emergencia</a></li>
-					<li><a id="admission" href="admission.html">Admisión</a></li>
-				    <li><a id="hospitalization" href="hospitalization.html">Hospitalización</a></li>
-					<li><a href="protocols.html">Protocolos</a></li>
-					<li><a href="services.html">Servicios</a></li>
-					<li><a id="supplyAreas" href="supplyAreas.html">Suministros</a></li>
-					<li><a href="departments.html">Unidades</a></li>
-					<li><a href="doctors.html">Especialistas</a></li><li><a href="paymentResponsibles.html">Responsables de Pago</a></li>
-					<li><a href="bank.html">Cajas</a></li>
-					<li><a href="bankAccounts.html">Bancos</a></li>
-					<li><a id="accounts" href="accounts.html">Cuentas</a></li>
+				   <li class='first'><a href='index.html'><span>Presupuesto</span></a></li>
+				   <li><a href='#'><span>Emergencia</span></a></li>
+				   <li><a href='#'><span>Admisión</span></a></li>
+				   <li><a href='#'><span>Hospitalización</span></a></li>
+				   <li><a href='#'><span>Usuarios</span></a></li>
+				   <li class='has-sub'>
+					<a href='#'><span>Protocolos</span></a>
+				      <ul>
+				         <li class='first'><a href='#'><span>Protocolos</span></a></li>
+				         <li class='last'><a href='#'><span>Tratamiento Médico</span></a></li>
+				      </ul>
+				   </li>
+				   <li><a href='#'><span>Servicios</span></a></li>
+				   <li><a href='#'><span>Suministros</span></a></li>
+				   <li><a href='#'><span>Unidades</span></a></li>
+				   <li><a href='#'><span>Especialistas</span></a></li>
+				   <li><a href='#'><span>Responsables de Pago</span></a></li>
+				   <li><a href='#'><span>Cajas</span></a></li>
+				   <li><a href='#'><span>Bancos</span></a></li>
+				   <li class='last'><a href='#'><span>Cuentas</span></a></li>
 				</ul>
-			</div>
-            <div id="leftmenu_bottom"></div>
-        </div>  
+		</div>
 		<div id="content">
 			<h2>Agregar Evolución:</h2><br>
 			<br>
