--- a/WebContent/createInsurance.html
+++ b/WebContent/createInsurance.html
@@ -83,27 +83,30 @@
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
-			<div id="leftmenu">
-				<div id="leftmenu_top"></div>
-				<div id="leftmenu_main">
-					<ul>
-					    <li><a href="estimations.html">Presupuestos</a></li>
-					    <li><a href="emergencies.html">Emergencia</a></li>
-						<li><a href="admission.html">Admisión</a></li>
-					    <li><a href="hospitalization.html">Hospitalización</a></li>
-					    <li><a href="users.html">Usuarios</a></li>
-						<li><a href="protocols.html">Protocolos</a></li>
-						<li><a href="services.html">Servicios</a></li>
-						<li><a href="supplyAreas.html">Suministros</a></li>
-						<li><a href="departments.html">Unidades</a></li>
-						<li><a href="doctors.html">Especialistas</a></li>
-						<li><a href="paymentResponsibles.html">Responsables de Pago</a></li>
-						<li><a href="bank.html">Cajas y Bancos</a></li>
-						<li><a class="active" href="accounts.html">Cuentas</a></li>
-					</ul>
-				</div>
-	            <div id="leftmenu_bottom"></div>
-	        </div>
+					<div id='cssmenu'>
+				<ul>
+				   <li class='first'><a href='estimations.html'><span>Presupuesto</span></a></li>
+				   <li><a href='emergencies.html'><span>Emergencia</span></a></li>
+				   <li><a href='admission.html'><span>Admisión</span></a></li>
+				   <li><a href='hospitalization.html'><span>Hospitalización</span></a></li>
+				   <li><a href='users.html'><span>Usuarios</span></a></li>
+				   <li class='has-sub'>
+					<a href='#'><span>Protocolos</span></a>
+				      <ul>
+				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
+				         <li class='last'><a href='protocols.html'><span>Tratamiento Médico</span></a></li>
+				      </ul>
+				   </li>
+				   <li><a href='services.html'><span>Servicios</span></a></li>
+				   <li><a href='supplyAreas.html'><span>Suministros</span></a></li>
+				   <li><a href='departments.html'><span>Unidades</span></a></li>
+				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
+				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
+				   <li><a href='bank.html'><span>Cajas</span></a></li>
+				   <li><a href='bankAccounts.html'><span>Bancos</span></a></li>
+				   <li class='last active'><a href='accounts.html'><span>Cuentas</span></a></li>
+				</ul>
+			</div>
         	<div id="content" style="position:absolute;">	
 	        	<h2>Datos del responsable de pago:</h2>
 	        	<br>
@@ -117,7 +120,7 @@
 							<label for="name">Nombre:</label>
 							<input type="text" name="txtName" id="txtName" maxlength="50" size="5" style="width: 430px;" /> <br><br>
 							<b>Rif:</b>
-							<select style="margin-left:143px;">
+							<select style="margin-left:166px;">
 								<option>J</option>
 								<option>G</option>
 							</select>
@@ -127,11 +130,11 @@
 							<label>Dirección:</label>
 							<textarea name="txtAddress" id="txtAddress" rows="2" cols="69"></textarea><br><br>
 							<b>Teléfono:</b>
-							<input type="text" name="txtPhone" id="txtPhone" maxlength="50" size="5" style="margin-left:100px;width:160px;">
+							<input type="text" name="txtPhone" id="txtPhone" maxlength="50" size="5" style="margin-left:125px;width:160px;">
 							<b style="margin-left: 10px;">Fax:</b>
 							<input type="text" name="txtFax" id="txtFax" maxlength="50" size="5" style="margin-left: 72px; width: 150px;" ><br><br>
 							<b>Email:</b>
-							<input type="text" name="txtEmail" id="txtEmail" maxlength="50" size="5" style="margin-left:123px;width:160px;">
+							<input type="text" name="txtEmail" id="txtEmail" maxlength="50" size="5" style="margin-left:148px;width:160px;">
 							<b style="margin-left: 10px;">Página Web:</b>
 							<input type="text" name="txtWebsite" id="txtWebsite" maxlength="50" size="5" style="margin-left: 22px; width: 150px;" >
 							
