--- a/WebContent/editHospitalization.html
+++ b/WebContent/editHospitalization.html
@@ -45,28 +45,30 @@
            		</ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
-			<div id="leftmenu">
-				<div id="leftmenu_top"></div>
-				<div id="leftmenu_main">
-					<ul>
-						<li><a href="estimations.html">Presupuestos</a></li>
-					    <li><a href="emergencies.html">Emergencia</a></li>
-						<li><a href="admission.html">Admisión</a></li>
-					    <li><a class="active" href="hospitalization.html">Hospitalización</a></li>
-					    <li><a href="users.html">Usuarios</a></li>
-						<li><a href="protocols.html">Protocolos</a></li>
-						<li><a href="services.html">Servicios</a></li>
-						<li><a href="supplyAreas.html">Suministros</a></li>
-						<li><a href="departments.html">Unidades</a></li>
-						<li><a href="doctors.html">Especialistas</a></li>
-						<li><a href="paymentResponsibles.html">Responsables de Pago</a></li>
-						<li><a href="bank.html">Cajas</a></li>
-						<li><a href="bankAccounts.html">Bancos</a></li>
-						<li><a href="accounts.html">Cuentas</a></li>   
-					</ul>
-				</div>
-	            <div id="leftmenu_bottom"></div>
-	        </div>
+					<div id='cssmenu'>
+				<ul>
+				   <li class='first'><a href='estimations.html'><span>Presupuesto</span></a></li>
+				   <li><a href='emergencies.html'><span>Emergencia</span></a></li>
+				   <li><a href='admission.html'><span>Admisión</span></a></li>
+				   <li class='active'><a  href='hospitalization.html'><span>Hospitalización</span></a></li>
+				   <li><a href='users.html'><span>Usuarios</span></a></li>
+				   <li class='has-sub'>
+					<a href='#'><span>Protocolos</span></a>
+				      <ul>
+				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
+				         <li class='last'><a href='protocols.html'><span>Tratamiento Médico</span></a></li>
+				      </ul>
+				   </li>
+				   <li><a href='services.html'><span>Servicios</span></a></li>
+				   <li><a href='supplyAreas.html'><span>Suministros</span></a></li>
+				   <li><a href='departments.html'><span>Unidades</span></a></li>
+				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
+				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
+				   <li><a href='bank.html'><span>Cajas</span></a></li>
+				   <li><a href='bankAccounts.html'><span>Bancos</span></a></li>
+				   <li class='last'><a href='accounts.html'><span>Cuentas</span></a></li>
+				</ul>
+			</div>
         	<div id="content" style="position:absolute;">	
 	        	<h2>Editar Hospitalización:</h2>
 				<br>
