--- a/WebContent/showStatement.html
+++ b/WebContent/showStatement.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Ver Admisión</title>
+		<title>Ver Corte de Cuenta</title>
 		<link rel="stylesheet" href="/resources/demos/style.css" />
 	</head>
 	<body>
@@ -18,28 +18,32 @@
             	</ul>	
 		    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
-			<div id="leftmenu">
-				<div id="leftmenu_top"></div>
-				<div id="leftmenu_main">
-					<ul>
-					    <li><a href="estimations.html">Presupuestos</a></li>
-					    <li><a class="active" href="emergencies.html">Emergencia</a></li>
-						<li><a href="admission.html">Admisión</a></li>
-					    <li><a href="hospitalization.html">Hospitalización</a></li>
-						<li><a href="protocols.html">Protocolos</a></li>
-						<li><a href="services.html">Servicios</a></li>
-						<li><a href="supplyAreas.html">Suministros</a></li>
-						<li><a href="departments.html">Unidades</a></li>
-						<li><a href="doctors.html">Especialistas</a></li>
-						<li><a href="bank.html">Cajas</a></li>
-						<li><a href="bankAccounts.html">Bancos</a></li>
-						<li><a href="accounts.html">Cuentas</a></li>  
-					</ul>
-				</div>
-	            <div id="leftmenu_bottom"></div>
-	        </div>
+							<div id='cssmenu'>
+				<ul>
+				   <li class='first'><a href='estimations.html'><span>Presupuesto</span></a></li>
+				   <li class='active'><a href='emergencies.html'><span>Emergencia</span></a></li>
+				   <li><a href='admission.html'><span>Admisión</span></a></li>
+				   <li><a href='hospitalization.html'><span>Hospitalización</span></a></li>
+				   <li><a href='users.html'><span>Usuarios</span></a></li>
+				   <li class='has-sub'>
+					<a href='#'><span>Protocolos</span></a>
+				      <ul>
+				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
+				         <li class='last'><a href='protocols.html'><span>Tratamiento Médico</span></a></li>
+				      </ul>
+				   </li>
+				   <li><a href='services.html'><span>Servicios</span></a></li>
+				   <li><a href='supplyAreas.html'><span>Suministros</span></a></li>
+				   <li><a href='departments.html'><span>Unidades</span></a></li>
+				   <li><a href='doctors.html'><span>Especialistas</span></a></li>
+				   <li><a href='paymentResponsibles.html'><span>Responsables de Pago</span></a></li>
+				   <li><a href='bank.html'><span>Cajas</span></a></li>
+				   <li><a href='bankAccounts.html'><span>Bancos</span></a></li>
+				   <li class='last'><a href='accounts.html'><span>Cuentas</span></a></li>
+				</ul>
+			</div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Corte de Cuenta:</h2>   
+	        	<h2>Corte de cuenta del(la) paciente Ana Rojas:</h2>   
 	        	<br>
 				<p>
 			   	<b>Caja:</b> Administracion<br><br>
