Mejora interfaz. Creacion tratamiento medicos
Quite las pestanas de servicio y suministros tanto de emergencia como
servicios y modifique las referencias y el formato de los procolos.

--- a/WebContent/editSupply.html
+++ b/WebContent/editSupply.html
@@ -19,8 +19,8 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
 	            	<li class="menuitem"><a href="supplyAreas.html">Ver Áreas Suministros</a></li>
-	            	<li class="menuitem"><a href="supplies.html" style="margin-left:10px;">Ver Suministros</a></li>
-	            	<li class="menuitem"><a href="createSupply.html" style="margin-left:10px;">Crear Suministro</a></li>
+	            	<li class="menuitem"><a href="supplies.html">Ver Suministros</a></li>
+	            	<li class="menuitem"><a href="createSupply.html">Crear Suministro</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -35,7 +35,7 @@
 					<a href='#'><span>Protocolos</span></a>
 				      <ul>
 				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
-				         <li class='last'><a href='protocols.html'><span>Tratamiento Médico</span></a></li>
+				         <li class='last'><a href='medicalTreatment.html'><span>Tratamiento Médico</span></a></li>
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
