--- a/WebContent/showEmergency.html
+++ b/WebContent/showEmergency.html
@@ -37,7 +37,7 @@
 					<a href='#'><span>Protocolos</span></a>
 				      <ul>
 				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
-				         <li class='last'><a href='protocols.html'><span>Tratamiento Médico</span></a></li>
+				         <li class='last'><a href='medicalTreatment.html'><span>Tratamiento Médico</span></a></li>
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
@@ -57,9 +57,7 @@
 					<ul>
 					    <li><a href="#tabs-1">Paciente</a></li>
 					    <li><a href="#tabs-2">Protocolos</a></li>
-					    <li><a href="#tabs-3">Servicios</a></li>
-					    <li><a href="#tabs-4">Suministros</a></li>
-			  		</ul>
+					</ul>
   					<div id="tabs-1">
   						<br>
 					    <p>
@@ -70,69 +68,35 @@
 					    Cama: Camilla 1<br><br>
 					    </p>
   					</div>
-  					<div id="tabs-2">
+  				<div id="tabs-2">
   						<br>
-					    <p>
-					    * Emergencia<br><br>
-					    </p>
-  					</div>
-  					<div id="tabs-3">
-  						<br>
-					    <table id="sweetTable">
-							<tbody>
-								<tr>
-									<th>Servicio</th>
-									<th>Precio</th>
-								</tr>				
-								<tr>
-									<td>Consulta de Emergencia</td>
-									<td>Bs 993,60</td>
-								</tr>				
-								<tr>
-									<td>Honorario Equipo de Emergencia</td>
-									<td>Bs 329,60</td>
-								</tr>				
-								<tr>
-									<td>Servicios Médicos</td>
-									<td>Bs 2572,45</td>
-								</tr>				
-								<tr id="totalTr">
-									<td>*** MONTO TOTAL ***</td>
-									<td>Bs 3898,65</td>
-								</tr>
-							</tbody>
-						</table>
-						<br>
+					   	<table id="sweetTable" style="margin-bottom: 10px;">
+					   		<tr style="background: rgb(136, 162, 190);">
+					   			<td>Nombre</td>
+					   			<td>Precio</td>
+					   			<td>Acción</td>
+					   		</tr>
+							<tr>
+					   			<td>Colocación de prótesis peneana</td>
+					   			<td>Bs. 14321,00</td>
+					   			<td>
+									<a href="showProtocolEmergencyDetail.html" style="color: transparent" >
+												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+									</a>
+								</td>
+					   		</tr>
+					   		<tr>
+					   			<td>Apendicectomía</td>
+					   			<td>Bs. 7680,00</td>
+					   			<td>
+									<a href="showProtocolEmergencyDetail.html" style="color: transparent" >
+												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+									</a>
+								</td>
+					   		</tr>
+					   	</table>
 					</div>
-					<div id="tabs-4">
-						<br>
-					    <table id="sweetTable">
-							<tbody>
-								<tr>
-									<th>Suministro</th>
-									<th>Cantidad</th>
-								</tr>				
-								<tr>
-									<td>Guantes de Examen N/Esteril M</td>
-									<td>1</td>
-								</tr>				
-								<tr>
-									<td>Alcohol</td>
-									<td>1</td>
-								</tr>				
-								<tr>
-									<td>Algodón</td>
-									<td>3</td>
-								</tr>				
-								<tr>
-									<td>Sábanas de Camilla</td>
-									<td>1</td>
-								</tr>
-							</tbody>
-						</table>
-						<br>
-					</div>
-				</div>
+  				</div>
 				<div id="botonera">
 					<form action="printEmergency.html">
 						<div id="botonP" style="display: inline; margin-right: 30px;">
