--- a/WebContent/editEstimation.html
+++ b/WebContent/editEstimation.html
@@ -43,7 +43,7 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
 	            	<li class="menuitem"><a href="estimations.html">Ver Presupuestos</a></li>
-	            	<li class="menuitem"><a href="createEstimation.html" style="margin-left:10px;">Crear Presupuesto</a></li>
+	            	<li class="menuitem"><a href="createEstimation.html">Crear Presupuesto</a></li>
 	     
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
@@ -59,7 +59,7 @@
 					<a href='#'><span>Protocolos</span></a>
 				      <ul>
 				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
-				         <li class='last'><a href='protocols.html'><span>Tratamiento Médico</span></a></li>
+				         <li class='last'><a href='medicalTreatment.html'><span>Tratamiento Médico</span></a></li>
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
