--- a/WebContent/showBankAccount.html
+++ b/WebContent/showBankAccount.html
@@ -19,7 +19,7 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
 	            	<li class="menuitem"><a href="bankAccounts.html">Ver Cuentas</a></li>
-	            	<li class="menuitem"><a href="createBankAccount.html" style="margin-left:10px;">Crear Cuenta</a></li>
+	            	<li class="menuitem"><a href="createBankAccount.html">Crear Cuenta</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -34,7 +34,7 @@
 					<a href='#'><span>Protocolos</span></a>
 				      <ul>
 				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
-				         <li class='last'><a href='protocols.html'><span>Tratamiento Médico</span></a></li>
+				         <li class='last'><a href='medicalTreatment.html'><span>Tratamiento Médico</span></a></li>
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
