--- a/WebContent/showEstimation.html
+++ b/WebContent/showEstimation.html
@@ -70,7 +70,7 @@
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul id="menuInside">
 	            	<li class="menuitem"><a href="estimations.html">Ver Presupuestos</a></li>
-	            	<li class="menuitem"><a href="createEstimation.html" style="margin-left:10px;">Crear Presupuesto</a></li>
+	            	<li class="menuitem"><a href="createEstimation.html">Crear Presupuesto</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -85,7 +85,7 @@
 					<a href='#'><span>Protocolos</span></a>
 				      <ul>
 				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
-				         <li class='last'><a href='protocols.html'><span>Tratamiento Médico</span></a></li>
+				         <li class='last'><a href='medicalTreatment.html'><span>Tratamiento Médico</span></a></li>
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
@@ -128,7 +128,7 @@
 					   			<td>Colocación de prótesis peneana</td>
 					   			<td>Bs. 14321,00</td>
 					   			<td>
-									<a href="showProtocolDetail.html" style="color: transparent" >
+									<a href="showProtocolEstimationDetail.html" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 									</a>
 								</td>
@@ -137,7 +137,7 @@
 					   			<td>Apendicectomía</td>
 					   			<td>Bs. 7680,00</td>
 					   			<td>
-									<a href="showProtocolDetail.html" style="color: transparent" >
+									<a href="showProtocolEstimationDetail.html" style="color: transparent" >
 												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
 									</a>
 								</td>
