Cambios sencillos de interfaz

--- a/WebContent/accountMovements.html
+++ b/WebContent/accountMovements.html
@@ -77,7 +77,7 @@
 					<a href='#'><span>Protocolos</span></a>
 				      <ul>
 				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
-				         <li class='last'><a href='protocols.html'><span>Tratamiento Médico</span></a></li>
+				         <li class='last'><a href='medicalTreatment.html'><span>Tratamiento Médico</span></a></li>
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
