--- a/WebContent/showHospitalization.html
+++ b/WebContent/showHospitalization.html
@@ -78,7 +78,7 @@
 					<a href='#'><span>Protocolos</span></a>
 				      <ul>
 				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
-				         <li class='last'><a href='protocols.html'><span>Tratamiento Médico</span></a></li>
+				         <li class='last'><a href='medicalTreatment.html'><span>Tratamiento Médico</span></a></li>
 				      </ul>
 				   </li>
 				   <li><a href='services.html'><span>Servicios</span></a></li>
@@ -98,9 +98,7 @@
 					<ul>
 					    <li><a href="#tabs-1">Paciente</a></li>
 					    <li><a href="#tabs-2">Protocolos</a></li>
-					    <li><a href="#tabs-3">Servicios</a></li>
-					    <li><a href="#tabs-4">Suministros</a></li>
-			  		</ul>
+					</ul>
   					<div id="tabs-1">
   						<br>
 					   	<div class="leftColum"><b> Cédula: </b></div>V-12345678<br>
@@ -113,81 +111,35 @@
 					   <div class="leftColum"><b> Responsable del Pago:</b></div> La Previsora<br><br>
 					   
   					</div>
-  					<div id="tabs-2">
+  							<div id="tabs-2">
   						<br>
-					    <p>
-					    * Histerectomía<br><br>
-					    * Colecistectomía<br><br>
-					    * Apendicectomía<br><br>
-					    </p>
-  					</div>
-  					<div id="tabs-3">
-  						<br>
-					    <table id="sweetTable">
-							<tbody>
-								<tr>
-									<th>Servicio</th>
-									<th>Precio</th>
-								</tr>				
-								<tr>
-									<td>Hospitalización</td>
-									<td>Bs 3472,00</td>
-								</tr>				
-								<tr>
-									<td>Anestesia Peridural</td>
-									<td>Bs 2727,50</td>
-								</tr>				
-								<tr>
-									<td>Servicios Médicos</td>
-									<td>Bs 1021,90</td>
-								</tr>				
-								<tr id="totalTr">
-									<td>*** MONTO TOTAL ***</td>
-									<td>Bs 7221,40</td>
-								</tr>
-							</tbody>
-						</table>
-						<br>
+					   	<table id="sweetTable" style="margin-bottom: 10px;">
+					   		<tr style="background: rgb(136, 162, 190);">
+					   			<td>Nombre</td>
+					   			<td>Precio</td>
+					   			<td>Acción</td>
+					   		</tr>
+							<tr>
+					   			<td>Colocación de prótesis peneana</td>
+					   			<td>Bs. 14321,00</td>
+					   			<td>
+									<a href="showProtocolHospitalizationDetail.html" style="color: transparent" >
+												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+									</a>
+								</td>
+					   		</tr>
+					   		<tr>
+					   			<td>Apendicectomía</td>
+					   			<td>Bs. 7680,00</td>
+					   			<td>
+									<a href="showProtocolHospitalizationDetail.html" style="color: transparent" >
+												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
+									</a>
+								</td>
+					   		</tr>
+					   	</table>
 					</div>
-					<div id="tabs-4">
-						<br>
-					    <table id="sweetTable">
-							<tbody>
-								<tr>
-									<th>Suministro</th>
-									<th>Cantidad</th>
-									<th>Pendiente</th>
-									<th>Recibido</th>
-								</tr>				
-								<tr>
-									<td>Guantes de Examen N/Esteril M</td>
-									<td>1</td>
-									<td>1</td>
-									<td>0</td>
-								</tr>				
-								<tr>
-									<td>Alcohol</td>
-									<td>1</td>
-									<td>1</td>
-									<td>0</td>
-								</tr>				
-								<tr>
-									<td>Algodón</td>
-									<td>3</td>
-									<td>3</td>
-									<td>0</td>
-								</tr>				
-								<tr>
-									<td>Sábanas de Camilla</td>
-									<td>1</td>
-									<td>0</td>
-									<td>1</td>
-								</tr>
-							</tbody>
-						</table>
-						<br>
-					</div>
-				</div>
+  				</div>
 				<div id="botonera">
 					<form action="printHospitalization.html">
 						<div id="botonP" style="display: inline; margin-right: 30px;">
