--- a/WebContent/editMedicalTreatment.html
+++ b/WebContent/editMedicalTreatment.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 		<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-		<title>Editar Protocolo</title>
+		<title>Editar Tratamiento Médico</title>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/ui-lightness/jquery-ui.css" />
 	  	<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
@@ -18,8 +18,8 @@
         	<div id="menu">
 				<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
 		    	<ul>
-	            	<li class="menuitem"><a href="protocols.html">Ver Protocolos</a></li>
-            		<li class="menuitem"><a href="createProtocol.html" style="margin-left: 10px;">Crear Protocolo</a></li>
+	            	<li class="menuitem"><a href="medicalTreatment.html">Ver Tratamientos Médicos</a></li>
+            		<li class="menuitem"><a href="createMedicalTreatment.html">Crear Tratamiento Médico</a></li>
 	            </ul>
 				<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         	</div>        
@@ -48,7 +48,7 @@
 				</ul>
 			</div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Editar Protocolo:</h2>
+	        	<h2>Editar Tratamiento Médico:</h2>
 				<br>
 				<fieldset>
 					<label>Unidad: </label> 
