--- a/WebContent/medicalTreatment.html
+++ b/WebContent/medicalTreatment.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html >
+<!DOCTYPE >
 <html>
 	<head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 	<link rel="stylesheet" type="text/css" href="./css/styleAdmin.css" />
-	<title>Hospitalización</title>
+	<title>Tratamientos Médicos</title>
 	<script type="text/javascript" src="./js/jquery.js"></script>
 	<script type="text/javascript" src="./js/jquery.dataTables.js"></script>
 	<script type="text/javascript" src="./js/jquery.leanModal.min.js"></script>
@@ -18,9 +18,7 @@
 				null,
 				null,
 				null,
-				null,
-				null,
-				{ "bSearchable": false, "asSorting": false }
+				{ "bSearchable": false, "asSorting": false, "sWidth": "18%" }
 			],
 			"oLanguage": {
 	            "sLengthMenu": "Mostrar _MENU_ registros",
@@ -60,17 +58,20 @@
         	<img alt="logo" src="./images/logo.png"/>
         </div>         
         <div id="menu">
-			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>
-			<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
+			<div class="menuitemHome" ><a href="mainMenu.html">Home</a></div>	
+			<ul>
+            	<li class="menuitem"><a href="createMedicalTreatment.html">Crear Tratamiento Médico</a></li>
+            </ul>
+	    	<div class="menuitemSalir"><a href="index.html">Salir</a></div>	
         </div>        
 		<div id='cssmenu'>
 				<ul>
 				   <li class='first'><a href='estimations.html'><span>Presupuesto</span></a></li>
 				   <li><a href='emergencies.html'><span>Emergencia</span></a></li>
 				   <li><a href='admission.html'><span>Admisión</span></a></li>
-				   <li class='active' ><a href='hospitalization.html'><span>Hospitalización</span></a></li>
+				   <li><a href='hospitalization.html'><span>Hospitalización</span></a></li>
 				   <li><a href='users.html'><span>Usuarios</span></a></li>
-				   <li class='has-sub'>
+				   <li class='has-sub active'>
 					<a href='#'><span>Protocolos</span></a>
 				      <ul>
 				         <li class='first'><a href='protocols.html'><span>Protocolos</span></a></li>
@@ -86,9 +87,9 @@
 				   <li><a href='bankAccounts.html'><span>Bancos</span></a></li>
 				   <li class='last'><a href='accounts.html'><span>Cuentas</span></a></li>
 				</ul>
-		</div>
+			</div>
 		<div id="content">  
-			<h2>Hospitalización:</h2>
+			<h2>Tratamientos Médicos:</h2>
 			<div id="dt_example">
 					<div id="container">
 						<div id="demo">
@@ -96,92 +97,54 @@
 								<thead>
 									<tr>
 										<th>ID</th>
-										<th>Paciente</th>
-										<th>Ubicación</th>
-										<th>Cama</th>
-										<th>Fecha Ingreso</th>
+										<th>Unidad</th>
+										<th>Nombre</th>
 										<th>Acciones</th>
 									</tr>
 								</thead>
 								<tbody>			
 									<tr class="gradeA">
 										<td>1001</td>
-										<td>Ana Rojas</td>
-										<td>UCI</td>
-										<td>Cama 1</td>
-										<td>20/06/2013 07:35</td>
+										<td>Cirugía General</td>
+										<td>Frenuloplastia</td>
 										<td>
-											<a href="showHospitalization.html" style="color: transparent" >
-												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
-											</a>
-											<a href="editHospitalization.html" style="color: transparent" >
+											<a href="editMedicalTreatment.html" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 											</a>
-											<a id="go" rel="leanModal" href="#dischargeUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'Ana Rojas');" >
-												<img alt="logo" src="./images/check.png"  height="16" width="16" title="Dar de Alta" />
-											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1001,'Ana Rojas');" >
+												onclick="return loadVars(1001,'Frenuloplastia');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
-											<a href="printStatement.html" style="color: transparent" >
-												<img alt="logo" src="./images/movements.png"  height="16" width="16" title="Corte de Cuenta" />
-											</a>
 											<br>
 										</td>
 									</tr>
 									<tr class="gradeA">
 										<td>1002</td>
-										<td>Luis Mujica</td>
-										<td>Piso 3</td>
-										<td>Hab 301</td>
-										<td>20/06/2013 08:42</td>
+										<td>Otros Procedimientos</td>
+										<td>Tratamiento Médico</td>
 										<td>
-											<a href="#" style="color: transparent" >
-												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
-											</a>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 											</a>
-											<a id="go" rel="leanModal" href="#dischargeUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1002,'Luis Mujica');" >
-												<img alt="logo" src="./images/check.png"  height="16" width="16" title="Dar de Alta" />
-											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1002,'Luis Mujica');" >
+												onclick="return loadVars(1002,'Tratamiento Médico');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
-											<a href="#" style="color: transparent" >
-												<img alt="logo" src="./images/movements.png"  height="16" width="16" title="Corte de Cuenta" />
-											</a>
 											<br>
 										</td>
 									</tr>
 									<tr class="gradeA">
 										<td>1003</td>
-										<td>Miguel Álvarez</td>
-										<td>Piso 4</td>
-										<td>Hab 402</td>
-										<td>20/06/2013 08:55</td>
+										<td>Emergencia</td>
+										<td>Emergencia</td>
 										<td>
-											<a href="#" style="color: transparent" >
-												<img alt="logo" src="./images/detail.png"  height="16" width="16" title="Ver Detalle" />
-											</a>
 											<a href="#" style="color: transparent" >
 												<img alt="logo" src="./images/edit.png"  height="16" width="16" title="Editar" />
 											</a>
-											<a id="go" rel="leanModal" href="#dischargeUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1003,'Miguel Álvarez');" >
-												<img alt="logo" src="./images/check.png"  height="16" width="16" title="Dar de Alta" />
-											</a>
 											<a id="go" rel="leanModal" href="#deleteUser" style="color: #f7941e; font-weight: bold;" 
-												onclick="return loadVars(1003,'Miguel Álvarez');" >
+												onclick="return loadVars(1003,'Emergencia');" >
 												<img alt="logo" src="./images/delete.png" height="16" width="16" title="Eliminar"/>
 											</a> 
-											<a href="#" style="color: transparent" >
-												<img alt="logo" src="./images/movements.png"  height="16" width="16" title="Corte de Cuenta" />
-											</a>
 											<br>
 										</td>
 									</tr>
@@ -191,41 +154,18 @@
 					</div>
 				</div>
 				<div class="spacer"></div>
-        	</div>
        	</div>
+		</div>
 		<div id="deleteUser">
 			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Eliminar Hospitalización</h3>
+				<h3 id="see_id" class="sprited" > Eliminar Tratamiento Médico</h3>
 				<br><br>
-				<span>¿Está seguro que desea eliminar del sistema la hospitalización de <span class="cliente"></span>? </span> <br><br>
+				<span>¿Está seguro que desea eliminar el tratamiento médico '<span class="cliente"></span>' y su información asociada? </span> <br><br>
 				<div id="signup-header">
 					<a class="close_x" id="close_x"  href="#"></a>
 				</div>
-				<form action="hospitalization.html" method="post"  onsubmit="return setV(this)">
+				<form action="protocols.html" method="post"  onsubmit="return setV(this)">
 					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
-					<div class="btn-fld">
-						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
-					</div>
-		 		</form>
-			</div>
-		</div>
-		<div id="dischargeUser">
-			<div id="signup-ct">
-				<h3 id="see_id" class="sprited" > Dar de Alta</h3>
-				<br><br>
-				<span>¿Está seguro que desea darle de alta a <span class="cliente"></span>? </span> <br><br>
-				<div id="signup-header">
-					<a class="close_x" id="close_x"  href="#"></a>
-				</div>
-				<form action="hospitalization.html" method="post"  onsubmit="return setV(this)">
-					<input type="hidden" id="userId" class="good_input" name="userId"  value=""/>
-					Indique Razón: 
-					<select>
-						<option value="1">Alta Administrativa</option>
-						<option value="2">Alta Médica</option>
-						<option value="3">Alta por Defunción</option>
-						<option value="4">Alta por Traslado</option>
-					</select>
 					<div class="btn-fld">
 						<input type="submit"  class="buttonPopUpDelete"  name="sbmtButton" value="Aceptar"  />
 					</div>
