--- a/WebContent/addDrugs.html
+++ b/WebContent/addDrugs.html
@@ -47,7 +47,7 @@
 				</ul>
 			</div>
         	<div id="content" style="position:absolute;">	
-	        	<h2>Fármacos en Habitación</h2> <br>
+	        	<h2>Fármacos en Habitación</h2> <br><br>
 	        	<p>Para comenzar a agregar fármacos, haga clic en "Agregar Nuevo". Al escoger todos los deseados, haga clic en "Aceptar".</p><br>
 	        	
 	        	<p class="button-par"> 
