--- a/WebContent/createProtocol.html
+++ b/WebContent/createProtocol.html
@@ -74,46 +74,62 @@
 							    	<tr id="tr1">
 							    		<td>Habitación: <input type="text" value="1" name="days" class="days" size="4"> días</td>
 							    		<td>Bs. 2270</td>
+							    		<td></td>
+							    		
 							    	</tr>
 							    	<tr id="tr2">
 							    		<td>Médico Residente</td>
 							    		<td>Bs. 2270</td>
+							    		<td></td>
 							    	</tr>
 							    	<tr id="tr3">
 							    		<td id="">Teléfono</td>
 							    		<td>Bs. 2270</td>
+							    		<td></td>
 							    	</tr>
 							    	<tr id="tr4">
 							    		<td>Televisión</td>
 							    		<td>Bs. 2270</td>
+							    		<td></td>
 							    	</tr>
 							    	<tr id="tr5">
 							    		<td>Acompañante</td>
 							    		<td>Bs. 2270</td>
+							    		<td></td>
 							    	</tr>
 							    	<tr id="tr6">
 							    		<td>Kit Paciente</td>
 							    		<td>Bs. 2270</td>
+							    		<td></td>
 							    	</tr>
 							    	<tr>
 							    		<td>Servicio de Asistencia Permanente</td>
 							    		<td>Bs. 2270</td>
+							    		<td></td>
 							    	</tr>
 							    	<tr>
 							    		<td>Servicio de Alimentación</td>
 							    		<td>Bs. 2270</td>
+							    		<td></td>
 							    	</tr>
 							    	<tr>
 							    		<td>Servicios Farmacéuticos Quirúrgicos</td>
 							    		<td>Bs. 2270</td>
+							    		<td></td>
 							    	</tr>
 							    	<tr>
 							    		<td>Fármacos en Habitación</td>
 							    		<td>Bs. 2270</td>
+							    		<td>
+							    			<a href="addDrugs.html">
+							    				<input type="button" class="buttonGray" value="Editar">
+							    			</a> 
+							    		</td>
 							    	</tr>
 							    	<tr>
 							    		<td>Material Médico Quirúrgico en Habitación</td>
 							    		<td>Bs. 2270</td>
+							    		<td></td>
 							    	</tr>
 							    	
 							    </table>
